--- a/SocialStrata/package.json
+++ b/SocialStrata/package.json
@@ -2,6 +2,7 @@
   "name": "socialstrata",
   "version": "1.1.1",
   "description": "SocialStrata: An Ionic project",
+  "private": true,
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -13,6 +14,7 @@
     "bower": "^1.3.3",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   }
