--- a/SocialStrata/package.json
+++ b/SocialStrata/package.json
@@ -4,11 +4,13 @@
   "description": "SocialStrata: An Ionic project",
   "private": true,
   "dependencies": {
+    "angular-elastic": "^2.5.1",
+    "autolinker": "^0.26.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
